Fix display too long innovation title and display images

--- a/www/css/step-4.css
+++ b/www/css/step-4.css
@@ -104,3 +104,9 @@ textarea[readonly]:not(.cloned-text-input){
     background-color: #fff;
 }
 
+.step-public-input {
+  resize: none;
+  padding: 10px;
+  overflow-x: scroll;
+  white-space: nowrap;
+}
